# exificient-for-json.c

./: .gitignore  CMakeLists.txt  README_GS.md
EXI_files/: EXI_sample_1.exi  EXI_sample_1.json  EXI_sample_2.exi  EXI_sample_2.json
scripts/: build_simple_example.sh  build_test.sh  cmake_build_deb.sh  cmake_build_rel.sh  cmake_config_deb.sh  cmake_config_rel.sh
test_GS/: simple_example.c  test.c
